--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/assets/css/styles.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Weather</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <noscript class="h-screen w-screen flex flex-col justify-center content-center">
+      <h2 class="font-bold text-4xl text-center text-gray-800">JavaScript erforderlich</h2>
+      <p class="text-center text-lg text-gray-700">Bitte aktivieren Sie JavaScript, um diese Anwendung zu
+        nutzen.</p>
+  
+      <div class='flex justify-center align-middle w-full h-6 my-2'>
+        <p class="text-gray-500 font-normal">&copy; 2024
+          <a href="https://github.com/sebastian-sonne"
+            class="text-slate-600 hover:text-blue-500 transition-colors" target="_blank"> Sebastian Sonne</a>
+        </p>
+      </div>
+    </noscript>
+
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
