--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/icons/rain+snow+sun.png" />
     <link rel="stylesheet" href="/src/assets/css/styles.css" /> 
+    <link rel="stylesheet" href="/src/assets/css/custom.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
   </head>
