--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/icons/rain+snow+sun.png" />
+    <link rel="icon" type="image/svg+xml" href="public/icons/rain+snow+sun.png" id="favicon"/>
     <link rel="stylesheet" href="/src/assets/css/styles.css" /> 
     <link rel="stylesheet" href="/src/assets/css/custom.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
