--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
 
     <noscript class="h-screen w-screen flex flex-col justify-center content-center">
-      <h2 class="font-bold text-4xl text-center text-gray-800">JavaScript required</h2>
-      <p class="text-center text-lg text-gray-700">Please enable JavaScript in your browser settings.</p>
+      <h2 class="font-bold text-4xl text-center text-gray-800">JavaScript required | JavaScript Erforderlich</h2>
+      <p class="text-center text-lg text-gray-700">Enable JavaScript to use this App | Aktiviere JavaScript um diese App zu nutzen</p>
   
       <div class='flex justify-center align-middle w-full h-6 my-2'>
         <p class="text-gray-500 font-normal">&copy; 2024
